k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ct-react-test
  namespace: platform-prototype
  labels:
    app: ct-react-test
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: ct-react-test
